Issue #2989227 by mglaman, krcha, lisastreeter: Reduce the height of images when viewing a product on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7613,7 +7613,10 @@ body.navbar-is-fixed-top.toolbar-tray-open .cart-offcanvas {
   overflow: hidden;
   margin-bottom: 30px;
   width: 100%;
-  height: 570px; }
+  height: 370px; }
+  @media screen and (min-width: 768px) {
+    .product-img--main {
+      height: 570px; } }
   .product-img--main img {
     display: none; }
   .product-img--main__image {
