--- a/assets/scss/commerce/_product-full.scss
+++ b/assets/scss/commerce/_product-full.scss
@@ -120,7 +120,10 @@
       overflow: hidden;
       margin-bottom: $grid-gutter-width;
       width: 100%;
-      height: 570px;
+      height: 370px;
+      @media screen and (min-width: $screen-sm) {
+        height: 570px;
+      }
       img{
         display: none;
       }
